Modernize project setup and improve maintainability
Updated `.gitignore` to include patterns for Copilot-related files and markdown naming conventions.

Modified `Directory.Build.props`:
- Upgraded `TargetFramework` to `net10.0` and `LangVersion` to `latest`.
- Added OS-specific property groups for conditional constants.
- Enhanced test project settings with Microsoft Testing Platform (MTP) and xUnit integration.
- Reorganized settings for test libraries, benchmarks, and example projects.
- Centralized and updated NuGet package references.

Updated `Directory.Packages.props`:
- Added new package versions for `System.CommandLine`, `Microsoft.NET.Test.Sdk`, and others.
- Replaced older xUnit and benchmarking packages with newer versions.
- Improved organization of package references for test and benchmarking stacks.

Refactored `test.runsettings`:
- Simplified configuration by removing outdated settings.
- Updated code coverage settings for `XPlat` and `Microsoft` tools.
- Streamlined compatibility with modern testing tools.

Updated `vm2.Ulid.slnx`:
- Added GitHub workflows under `/.github/workflows/` for CI/CD processes.
- Consolidated workflow files and removed redundant CI/CD folder references.
- Reorganized solution items and added `.github/copilot-instructions.md`.

General improvements:
- Enhanced project structure for clarity and maintainability.
- Updated documentation and metadata to align with modern practices.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,126 +1,185 @@
 <Project>
-    <PropertyGroup Label="Packages">
-        <TargetFramework>net9.0</TargetFramework>
-        <LangVersion>preview<!--latest--></LangVersion>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <!-- for stackalloc mostly -->
-        <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-        <AnalysisLevel>preview<!--latest--></AnalysisLevel>
-        <WarningLevel>9999</WarningLevel>
-        <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-        <WarningsAsErrors />
-        <NoWarn>$(NoWarn);IDE0058;IDE0290;IDE0130;NU1109;NU1507</NoWarn>
-        <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
-        <IsTrimmable>true</IsTrimmable>
-        <TieredPGO>true</TieredPGO>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    </PropertyGroup>
+  <!-- ================ Common Settings ================ -->
+  <!-- Stack:
+          MinVer
+          GitHub
+  -->
+  <!-- ================================================= -->
+  <PropertyGroup Label="Packages">
+    <TargetFramework>net10.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- for stackalloc mostly -->
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <AnalysisLevel>latest</AnalysisLevel>
+    <WarningLevel>9999</WarningLevel>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <NoWarn>$(NoWarn);IDE0058;IDE0290;IDE0130;NU1109;NU1507</NoWarn>
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+    <IsTrimmable>true</IsTrimmable>
+    <TieredPGO>true</TieredPGO>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+  </PropertyGroup>
 
-    <PropertyGroup Label="NuGetGlobal">
-        <IsPackable>true</IsPackable>
-        <Company>vm</Company>
-        <Product>vm2</Product>
-        <ProductName>vm2 packages</ProductName>
-        <Authors>Val Melamed</Authors>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
-        <Copyright>Copyright © 2025 vm</Copyright>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <RepositoryType>git</RepositoryType>
-        <IncludeSymbols>True</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <EnablePackageValidation>true</EnablePackageValidation>
-        <MinVerTagPrefix>v</MinVerTagPrefix>
-    </PropertyGroup>
+  <PropertyGroup Label="NuGetGlobal">
+    <IsPackable>true</IsPackable>
+    <Company>vm</Company>
+    <Product>vm2</Product>
+    <ProductName>vm2 packages and tools</ProductName>
+    <Authors>Val Melamed</Authors>
+    <Copyright>Copyright ©2025 vm</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <RepositoryType>git</RepositoryType>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <EnablePackageValidation>true</EnablePackageValidation>
+    <MinVerTagPrefix>v</MinVerTagPrefix>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-        <PackageReference Include="MinVer">
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-    </ItemGroup>
+  <PropertyGroup Condition="'$(OS)' == 'WINDOWS_NT'">
+    <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(OS)' != 'WINDOWS_NT'">
+    <DefineConstants>$(DefineConstants);UNIX</DefineConstants>
+  </PropertyGroup>
 
-    <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]'))">
-        <!-- Test projects settings -->
-        <OutputType>Exe</OutputType>
-        <IsTestProject>true</IsTestProject>
-        <IsPackable>false</IsPackable>
-        <GenerateDocumentationFile>false</GenerateDocumentationFile>
-        <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-        <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
-        <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\..\test.runsettings</RunSettingsFilePath>
-        <NoWarn>
-            $(NoWarn);CA1031;CA1701;CA1702;CA1707;CA1806;CA2211;CS0618;CS1572;CS1573;CS1574;CS1591;CS1711;IDE0021;IDE0022;IDE0039;IDE0065;IDE1006;IDE2000;IDE2002;IDE0058;IDE0290
-        </NoWarn>
-    </PropertyGroup>
-    <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and $([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
-        <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-        <PackageReference Include="FluentAssertions" />
-        <PackageReference Include="xunit.v3" />
-        <!-- Required for VSTest but not for MS Test Platform. Microsoft Testing Platform makes the following references redundant:
-        -->
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        <PackageReference Include="xunit.runner.visualstudio">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="coverlet.msbuild">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="MinVer">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 
-    <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and !$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
-        <!-- for test libraries in the test folder: -->
-        <PackageReference Include="xunit.v3.extensibility.core" />
-    </ItemGroup>
+  <!-- ================ Test Projects Settings ================ -->
+  <!-- Test stack:
+          Microsoft Testing Platform (MTP) with
+          xUnit,
+          FluentAssertions
+      For *.Tests projects in the ./test folder:
+  -->
+  <!-- ======================================================== -->
+  <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and $([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
+    <!-- Test projects settings -->
+    <OutputType>Exe</OutputType>
+    <IsTestProject>true</IsTestProject>
+    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\..\test.runsettings</RunSettingsFilePath>
+    <!-- from the test project, usually ./test.Xyz.Tests -->
+    <!--<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport> <!- - To be able to run MTP projects in VSTest and 'dotnet test' experience, available for .NET 9 SDK and earlier for backward compatibility - ->-->
+    <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+    <!-- To opt-in xUnit in the Microsoft Testing Platform and use native command line 'dotnet run' experience -->
+    <!-- For more information on Microsoft Testing Platform support in xUnit.net, please visit: https://xunit.net/docs/getting-started/v3/microsoft-testing-platform -->
+    <EnableCodeCoverage>true</EnableCodeCoverage>
+    <!-- Enable code coverage collection with Microsoft.Testing.Extensions.CodeCoverage -->
+    <NoWarn>
+      $(NoWarn);CA1031;CA1701;CA1702;CA1707;CA1806;CA2211;CS0618;CS1572;CS1573;CS1574;CS1591;CS1711;IDE0021;IDE0022;IDE0039;IDE0065;IDE1006;IDE2000;IDE2002;IDE0058;IDE0290
+    </NoWarn>
+  </PropertyGroup>
 
-    <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]'))">
-        <Using Include="Xunit" />
-        <Using Include="FluentAssertions" />
-        <Using Include="FluentAssertions.Formatting" />
-        <Using Include="FluentAssertions.Extensibility" />
-    </ItemGroup>
+  <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and $([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
+    <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="xunit.v3.mtp-v2" />
+    <PackageReference Include="xunit.v3.extensibility.core" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <!-- SHOULD BE HERE TEMPORARILY! -->
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
 
-    <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
-        <!-- Test projects settings -->
-        <OutputType>Exe</OutputType>
-        <IsPackable>false</IsPackable>
-        <GenerateDocumentationFile>false</GenerateDocumentationFile>
-        <NoWarn>
-            $(NoWarn);CA1031;CA1701;CA1702;CA1707;CA1806;CA2211;CS0618;CS1572;CS1573;CS1574;CS1591;CS1711;IDE0021;IDE0022;IDE0039;IDE0065;IDE1006;IDE2000;IDE2002;IDE0058;IDE0290
-        </NoWarn>
-    </PropertyGroup>
-    <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
-        <PackageReference Include="BenchmarkDotNet" />
-        <PackageReference Include="BenchmarkDotNet.Annotations" />
-        <!-- To show up in the test explorer (with some perf. penalty)
-        <PackageReference Include="BenchmarkDotNet.TestAdapter" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" />
-        -->
-        <!-- for running with Visual Studio profiler:
-        <PackageReference Include="Microsoft.VisualStudio.DiagnosticsHub.BenchmarkDotNetDiagnosers" />
-        -->
-    </ItemGroup>
-    <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
-        <Using Include="BenchmarkDotNet" />
-        <Using Include="BenchmarkDotNet.Attributes" />
-        <Using Include="BenchmarkDotNet.Configs" />
-        <Using Include="BenchmarkDotNet.Jobs" />
-        <Using Include="BenchmarkDotNet.Order" />
-        <Using Include="BenchmarkDotNet.Running" />
-    </ItemGroup>
-    <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]examples[/\\]'))">
-        <!-- Example projects settings -->
-        <IsPackable>false</IsPackable>
-        <GenerateDocumentationFile>false</GenerateDocumentationFile>
-    </PropertyGroup>
+    <!-- These should be redundant for the test platform -->
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
+    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport.Abstractions" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage"/>
+  </ItemGroup>
+
+  <!-- ================ Test Libraries Settings ================ -->
+  <!-- Test stack:
+          Microsoft Testing Platform (MTP) with
+          xUnit,
+          FluentAssertions
+      For *.Tests.* projects in the ./test folder:
+  -->
+  <!-- ======================================================== -->
+  <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and !$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
+    <!-- Test libraries projects settings -->
+    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <NoWarn>
+      $(NoWarn);CA1031;CA1701;CA1702;CA1707;CA1806;CA2211;CS0618;CS1572;CS1573;CS1574;CS1591;CS1711;IDE0021;IDE0022;IDE0039;IDE0065;IDE1006;IDE2000;IDE2002;IDE0058;IDE0290
+    </NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]')) and !$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectName), '^*.Tests$'))">
+    <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="xunit.v3.extensibility.core" />
+  </ItemGroup>
+
+  <!-- Common usings for tests and libraries projects in the ./test folder: -->
+  <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]test[/\\]'))">
+    <Using Include="Xunit" />
+    <Using Include="FluentAssertions" />
+    <Using Include="FluentAssertions.Formatting" />
+    <Using Include="FluentAssertions.Extensibility" />
+  </ItemGroup>
+
+  <!-- ================ Benchmark Projects Settings ================ -->
+  <!-- Stack:
+          BenchmarkDotNet
+  -->
+  <!-- ============================================================= -->
+  <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
+    <!-- Test projects settings -->
+    <OutputType>Exe</OutputType>
+    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <NoWarn>
+      $(NoWarn);CA1031;CA1701;CA1702;CA1707;CA1806;CA2211;CS0618;CS1572;CS1573;CS1574;CS1591;CS1711;IDE0021;IDE0022;IDE0039;IDE0065;IDE1006;IDE2000;IDE2002;IDE0058;IDE0290
+    </NoWarn>
+  </PropertyGroup>
+
+  <!-- common packages for benchmark projects in the ./benchmarks folder: -->
+  <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
+    <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="BenchmarkDotNet.Annotations" />
+    <!-- To show up in the VS test explorer (with some perf. penalty!) -->
+    <!--
+    <PackageReference Include="BenchmarkDotNet.TestAdapter" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    -->
+    <!-- for running with Visual Studio profiler: -->
+    <!--
+    <PackageReference Include="Microsoft.VisualStudio.DiagnosticsHub.BenchmarkDotNetDiagnosers" />
+    -->
+  </ItemGroup>
+
+  <!-- common usings for benchmark projects in the ./benchmarks folder: -->
+  <ItemGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]benchmarks[/\\]'))">
+    <Using Include="BenchmarkDotNet" />
+    <Using Include="BenchmarkDotNet.Attributes" />
+    <Using Include="BenchmarkDotNet.Configs" />
+    <Using Include="BenchmarkDotNet.Jobs" />
+    <Using Include="BenchmarkDotNet.Order" />
+    <Using Include="BenchmarkDotNet.Running" />
+  </ItemGroup>
+
+  <!-- settings for example projects in the ./examples folder: -->
+  <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(MSBuildProjectDirectory), '[/\\]examples[/\\]'))">
+    <!-- Example projects settings -->
+    <IsPackable>false</IsPackable>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+  </PropertyGroup>
+
 </Project>
