--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -5,16 +5,14 @@
     </PropertyGroup>
 
     <PropertyGroup Label="NuGet">
-        <Title>vm2.Ulid</Title>
-        <Description>
-        Implementation of the Universally Unique Lexicographically Sortable Identifier (ULID) for .NET.
-        </Description>
         <PackageId>vm2.Ulid</PackageId>
-        <PackageReleaseNotes>Initial version of the vm2.Ulid.</PackageReleaseNotes>
-        <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
-        <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
+        <Title>Universally Unique Lexicographically Sortable Identifier (ULID) for .NET</Title>
+        <Description>Implementation of the Universally Unique Lexicographically Sortable Identifier (ULID) for .NET.</Description>
         <PackageTags>ULID Universally Unique Lexicographically Sortable Identifier .net core vm2</PackageTags>
+        <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReleaseNotes>No significant changes, but moved to the latest build pipeline templates.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
